# CDDA-Game-Launcher

./: README.md  pyproject.toml  requirements.txt  setup.py  uv.lock.license
.github/ISSUE_TEMPLATE/: bug_report_zh.yml  feature_request_zh.yml
.github/workflows/: build.yml
cddagl/: constants.py
cddagl/locale/zh/LC_MESSAGES/: cddagl.po
cddagl/locale/zh_CN/LC_MESSAGES/: cddagl.po
cddagl/ui/views/: backups.py  cddaguide.py  dialogs.py  fonts.py  main.py  mods.py  soundpacks.py  statistics.py
data/: mods.yaml
