[project]
name = "cdda-game-launcher"
version = "1.8.9"
description = "A Cataclysm: Dark Days Ahead launcher with additional features"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.16.5",
    "arrow>=1.4.0",
    "babel>=2.17.0",
    "cssselect>=1.3.0",
    "html5lib>=1.1",
    "httpx>=0.28.1",
    "markdown2>=2.5.4",
    "pyinstaller>=6.17.0",
    "pywin32>=311",
    "pywinutils>=0.2",
    "pyyaml>=6.0.3",
    "rarfile>=4.2",
    "requests>=2.32.5",
    "setuptools>=80.9.0",
    "sqlalchemy>=2.0.45",
    "werkzeug>=3.1.4",
]
